8337511: Implement JEP-404: Generational Shenandoah (Experimental)